<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignUpActivity">


    <TextView
        android:id="@+id/username_input_label"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="72dp"
        android:labelFor="@+id/username_input"
        android:text="@string/username_input_label"
        android:textColor="#ffff"
        app:layout_constraintStart_toStartOf="@+id/username_input"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#ffff"
        android:backgroundTint="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input_label" />

    <TextView
        android:id="@+id/email_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/email_input"
        android:text="@string/email_input_label"
        android:textColor="#ffff"
        app:layout_constraintStart_toStartOf="@+id/email_input"
        app:layout_constraintTop_toBottomOf="@+id/username_input"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#ffff"
        android:backgroundTint="#ffff"
        app:layout_constraintEnd_toEndOf="@+id/username_input"
        app:layout_constraintStart_toStartOf="@+id/username_input"
        app:layout_constraintTop_toBottomOf="@+id/email_input_label"
        android:autofillHints=""
        tools:targetApi="o" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ffff"
        android:backgroundTint="#ffff"
        app:layout_constraintEnd_toEndOf="@+id/email_input"
        app:layout_constraintStart_toStartOf="@+id/email_input"
        app:layout_constraintTop_toBottomOf="@+id/password_input_label"
        android:autofillHints=""
        tools:targetApi="o" />

    <TextView
        android:id="@+id/password_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/password_input"
        android:text="@string/password_label"
        android:textColor="#ffff"
        app:layout_constraintStart_toStartOf="@+id/password_input"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up_button_label"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password_input"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_input"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_input" />

    <TextView
        android:id="@+id/confirm_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/confirm_password_input"
        android:text="@string/confirm_password_label"
        android:textColor="#ffff"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_input"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ffff"
        android:backgroundTint="#ffff"
        app:layout_constraintEnd_toEndOf="@+id/password_input"
        app:layout_constraintStart_toStartOf="@+id/password_input"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_label"
        android:importantForAutofill="no"
        tools:targetApi="o" />

</android.support.constraint.ConstraintLayout>